--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
  </body>
      <script type="text/javascript">
- 				//将这个地址修改成需要的博客地址
-         window.location.href = "https://www.baidu.com"; 
+ 				//将这个地址修改成需要的 
+         window.location.href = "https://wharmony.org/"; 
      </script>
  </html>
